// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "./";
option java_multiple_files = false;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "resturantDataProxy";

package pb;

// The greeting service definition.
service Order {
  rpc AddOrder (AddOrderReq) returns (AddOrderReq) {}
  rpc UpdateOrder (UpdateOrderReq) returns (UpdateOrderRsp) {}
}

service Cart {
  rpc AddDishToCart(AddDishToCartReq) returns (AddDishToCartRsp) {}
  rpc RemoveDishFromCart(RemoveDishFromCartReq) returns (RemoveDishFromCartRsp) {}
}

service Dish {
  rpc AddDish (AddDishReq) returns (AddDishRsp) {}
  rpc UpdateDish (UpdateDishReq) returns (UpdateDishRsp) {}
  rpc DeleteDish (DeleteDishReq) returns (DeleteDishRsp) {}
  rpc SelectDishes (SelectDishesReq) returns (SelectDishesRsp) {}
  rpc GetDishes (GetDishesReq) returns (GetDishesRsp) {}
}

message User {
  string username = 1;
  string password = 2;
}

message OrderItem {
  string product_name = 1;
  int64 nums = 2;
}

// The request message containing the user's name.
message AddOrderReq {
  repeated OrderItem products = 1;
  User user = 2;
}

// The response message containing the greetings
message AddOrderRsp {
  string message = 1;
}

message AddDishReq{}

message AddDishRsp{}

message GetDishesReq{}

message GetDishesRsp{}

message UpdateDishReq{}

message UpdateDishRsp{}

message DeleteDishReq{}

message DeleteDishRsp{}

message SelectDishesReq{}

message SelectDishesRsp{}

message UpdateOrderReq{}

message UpdateOrderRsp{}

message AddDishToCartReq{}

message AddDishToCartRsp{}

message RemoveDishFromCartReq{}

message RemoveDishFromCartRsp{}
